<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/context"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="@dimen/usercenter_header_height">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/usercover"
                    android:layout_width="@dimen/usercneter_usercover_width"
                    android:layout_height="@dimen/usercneter_usercover_width"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/userlevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_usercenter_level"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="2dp"
                    android:text="lv   "
                    android:textColor="@color/color_white" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/header"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:padding="2dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/community"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_usercenter_type"
                    android:checked="true"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/community"
                    android:textColor="@color/selector_white_and_grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/friend"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_usercenter_type"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/friend"
                    android:textColor="@color/selector_white_and_grey" />

                <View
                    android:id="@+id/space_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/group"
                android:orientation="horizontal"
                android:background="@color/usercenter_subtype"
                android:padding="2dp">

                <View
                    android:id="@+id/space_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/message"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_usercenter_subtype"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="true"
                    android:text="@string/message"
                    android:textSize="11sp"
                    android:textColor="@color/selector_white_and_grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/dynamic"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_usercenter_subtype"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/dynamic"
                    android:textSize="11sp"
                    android:textColor="@color/selector_white_and_grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/work"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_usercenter_subtype"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textSize="11sp"
                    android:textColor="@color/selector_white_and_grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </RadioGroup>


            <LinearLayout
                android:id="@+id/layut_opeartion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/usercenter_chatbutton_height"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/addfriend"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/usercenter_chatbutton_height"
                    android:background="@drawable/ic_usercenter_addfriend"
                    android:layout_weight="1"
                    android:textColor="@color/color_white" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@null" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/chat"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/usercenter_chatbutton_height"
                    android:background="@drawable/ic_usercenter_chat"
                    android:layout_weight="1"
                    android:textColor="@color/color_white" />

            </LinearLayout>

            <com.malinskiy.superrecyclerview.SuperRecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/layut_opeartion"
                android:layout_below="@id/type"
                android:background="@color/color_white"
                app:layout_empty="@layout/emptyview_nodata"></com.malinskiy.superrecyclerview.SuperRecyclerView>

            <com.malinskiy.superrecyclerview.SuperRecyclerView
                android:id="@+id/worklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/layut_opeartion"
                android:layout_below="@id/type"
                android:background="@color/color_white"
                android:visibility="gone"
                app:layout_empty="@layout/emptyview_nodata"></com.malinskiy.superrecyclerview.SuperRecyclerView>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/emptyview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/layut_opeartion"
                android:layout_below="@id/type"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="@color/colorAccent"
                android:text="什么也没有!" />
        </RelativeLayout>


    </android.support.v4.widget.DrawerLayout>

</android.support.design.widget.CoordinatorLayout>